--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.14.1",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
